# smart_home

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.matter-bridge  Dockerfile.pi  README.md  docker-compose.pi.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  tplink_switches.json
.claude/: launch.json  settings.json  settings.local.json
.devcontainer/: devcontainer.json
.superpowers/sdd/: task-5-report.md
configs/: devices.example.yaml  matter-server.service
deploy/systemd/user/: go2rtc.service  smart-home-dashboard.service
docs/: WSL_DEVELOPMENT.md  architecture.md  atlassian-mcp.md  docker-development.md  matter-bridge.md  rpi4-cross-compile-deploy.md  setup-rpi4.md
docs/superpowers/plans/: 2026-06-23-hide-ambient-dashboard-view.md  2026-06-24-login.md  2026-06-25-matter-integration.md  2026-06-26-docker-pi-deployment.md  2026-06-26-matter-bridge.md
docs/superpowers/specs/: 2026-06-24-login-design.md  2026-06-25-matter-integration-design.md  2026-06-26-docker-pi-deployment-design.md  2026-06-26-matter-bridge-design.md
scripts/: build-chip-tool.sh  build-matter-bridge-native.sh  build-matter-bridge.sh  build-matter-single-light.sh  build-rpi4.sh  check-tuya-cloud.py  check-tuya-config.py  connect-pi.ps1  connect-pi.sh  control_devices.py  deploy-dashboard.sh  deploy-matter-bridge.sh  deploy-to-pi.ps1  deploy-to-pi.sh  dev-check.sh  discover-govee-ble.py  discover_tplink_switches.py  generate-go2rtc-config.py  import-tuya-snapshot.py  inspect-home-assistant-entities.py  inspect-tuya-cloud.py  install-dashboard-service.sh  install-dev-tools.sh  install-home-assistant-docker.sh  install-matter-server.sh  list-tuya-cloud-devices.py  matter_control.py  probe-camera-services.py  quote-env-values.py  run-dashboard.sh  run-go2rtc.sh  setup-github-ssh.sh  setup-matter-sdk.sh  setup-pi-docker.sh  setup_wsl_mcp.ps1  sync-tuya-cloud.py  test-camera-stream.py  test-matter-commissioning.sh  test-tplink-camera.sh  wsl_mcp_server.py
smart-home-rpi4-skill/: SKILL.md  install-skill.sh  make_skill.py
smart-home-skill-workspace/evals/: evals.json
src/cpp/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp
src/cpp/matter_bridge/: BridgeDevice.cpp  BridgeDevice.h  CHIPProjectAppConfig.h  CHIPProjectConfig.h  DeviceMapper.cpp  DeviceMapper.h  SyncClient.cpp  SyncClient.h  SystemProjectConfig.h  main.cpp
src/cpp/matter_single_light/: main.cpp
src/python/: README.md  bridge_sync.py  controller.py  matter_device.py  requirements.txt  tplink_switch.py  web_app.py
src/python/web_static/: app.js  build_info.json  index.html  login.html  styles.css
tests/: README.md
tests/cpp/: test_controller.cpp
tests/cpp/matter_bridge/: test_bridge_device.cpp  test_device_mapper.cpp  test_sync_client.cpp
tests/python/: test_bridge_sync.py  test_camera_battery_status.py  test_controller.py  test_dashboard_camera_frontend.py  test_dashboard_device_frontend.py  test_dashboard_header_system_controls.py  test_dashboard_layout.py  test_dashboard_light_scenes.py  test_docker_config.py  test_login.py  test_matter_auth_bypass.py  test_matter_bridge_integration.py  test_matter_bridge_rescan.py  test_matter_config.py  test_matter_device.py  test_sync_tuya_cloud.py  test_systemd_service.py  test_tplink_switch.py  test_web_app.py
